--- a/aboutseason.html
+++ b/aboutseason.html
@@ -153,6 +153,6 @@
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.min.js"></script>
-    <script src="js/sripts.js"></script>
+    <script src="sripts.js"></script>
 </body>
 </html>
