--- a/season.html
+++ b/season.html
@@ -11,6 +11,7 @@
        <link rel="stylesheet" href="font-awesome.min.css">
        <link rel="stylesheet" href="bootstrap-social.css">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> 
+       <link rel="stylesheet" href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
        <link rel="stylesheet" href="sty.css">
        <title>Seasonal Crops</title>
        
