--- a/contact.html
+++ b/contact.html
@@ -128,6 +128,9 @@
     </div>
 
  </div>
-
+<script src="jquery.slim.min.js"></script>
+<script src="popper.min.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="sripts.js"></script>
 </body>
 </html>
